--- a/.github/workflows/visitor.yml
+++ b/.github/workflows/visitor.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
-      - name: Test action
-        uses: ./
-        id: puppeteer-test
+      - name: Run test
+        uses: tj-actions/puppeteer@v5
+        id: puppeteer
         with:
           files: targets.js
