--- a/.github/workflows/visitor.yml
+++ b/.github/workflows/visitor.yml
@@ -5,8 +5,8 @@ on:
     branches: [master]
   workflow_dispatch:
   schedule:
-    # - cron: '59 23 * * *'  # at 23.59 every day
-    - cron: 0/5 * * * *  # every 5th minute
+    - cron: 59 23 * * *  # at 23.59 every day
+    # - cron: 0/5 * * * *  # every 5th minute
 jobs:
   test:
     name: Test puppeteer
